--- a/api-guide/apis/enterprise-api/image-editing/overview.mdx
+++ b/api-guide/apis/enterprise-api/image-editing/overview.mdx
@@ -1,89 +1,40 @@
 ---
 title: "Enterprise: Image Editing API"
+description: "The image editing suite offers exclusive API endpoints with essential features."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
+### Endpoints
 
-The image [Editing suites](https://modelslab.com/image-editing) brings you some exclusive API endpoints with few default essential endpoints
+<CardGroup cols={2}>
+  <Card title="Outpainting" icon="expand" href="/enterprise-api/image-editing/outpainting">
+    Extend images beyond their original boundaries with AI-powered outpainting
+  </Card>
 
-* [outpainting](/enterprise-api/image-editing/outpainting)
-* [magic\_mix](/enterprise-api/image-editing/magic-mix)
-* [removebg\_createmask](/enterprise-api/image-editing/removebg-createmask)
-* [fashion](/enterprise-api/image-editing/fashion)
-* [face\_gen](/enterprise-api/image-editing/face-gen)
-* [fetch](/enterprise-api/image-editing/fetchimage)
-* [head shot](/enterprise-api/image-editing/head-shot)
-* [object removal](/enterprise-api/image-editing/object-removal)
-* [mask\_creator](/enterprise-api/image-editing/mask_creator)
-* [clear cache](/enterprise-api/image-editing/clear-cache)
-* [restart server](/enterprise-api/image-editing/restart-server)
-* [system details](/enterprise-api/image-editing/system-details)
-* [update server](/enterprise-api/image-editing/update-server)
+  <Card title="Magic Mix" icon="wand-magic-sparkles" href="/enterprise-api/image-editing/magic-mix">
+    Generate eye-catching image blends with text prompts
+  </Card>
 
-## Available Endpoints[​](#available-endpoints "Direct link to Available Endpoints")
+  <Card title="Remove Background & Create Mask" icon="scissors" href="/enterprise-api/image-editing/removebg-createmask">
+    Remove backgrounds and create masks for image editing
+  </Card>
 
-### Image Mixer[​](#image-mixer "Direct link to Image Mixer")
+  <Card title="Fashion" icon="shirt" href="/enterprise-api/image-editing/fashion">
+    Try on clothing items on existing model bodies
+  </Card>
 
-Image mixers merges two images togethers to produce an eye catching result.
+  <Card title="Face Generator" icon="face-smile" href="/enterprise-api/image-editing/face-gen">
+    Generate images with provided face references
+  </Card>
 
-![Image-Mixer endpoint result](\images\enterprise-api\image-editing\assets\images\Image-Mixer-d9cc7c7856e2678cf74bc7fa034e174d.jpg)
+  <Card title="Head Shot" icon="user-tie" href="/enterprise-api/image-editing/head-shot">
+    Generate professional headshot images
+  </Card>
 
-### Remove Background and Create Mask[​](#remove-background-and-create-mask "Direct link to Remove Background and Create Mask")
+  <Card title="Object Removal" icon="eraser" href="/enterprise-api/image-editing/object-removal">
+    Remove unwanted objects from images
+  </Card>
 
-Use this endpoint to remove background and(or) create mask.
-
-![removebg-createmask endpoint result](\images\enterprise-api\image-editing\assets\images\Background-Removal-b950c09956614c3e222247b679b7b1c0.jpg)
-
-### Magic Mix[​](#magic-mix "Direct link to Magic Mix")
-
-Use this endpoint to generate an eye catching image blend with prompt
-
-![Magic-Mix endpoint result](\images\enterprise-api\image-editing\assets\images\Magic-Mix-e6b47757a52a10565eeb39168c78761b.jpg)
-
-### Outpainting[​](#outpainting "Direct link to Outpainting")
-
-Use this endpoint to outpaint
-
-![Outpainting endpoint result](\images\enterprise-api\image-editing\assets\images\Outpainting-f3a573d3b82f42a8177ad36204082feb.jpg)
-
-### Blip Diffusion[​](#blip-diffusion "Direct link to Blip Diffusion")
-
-Use this endpoint to for blip diffusion
-
-![Blip-Diffusion endpoint result](\images\enterprise-api\image-editing\assets\images\Blip-Diffusion-5d06d65af0c7c15de9e58b76495f2d74.jpg)
-
-### Fashion[​](#fashion "Direct link to Fashion")
-
-Use this endpoint to wear a cloth image on an existing model body.
-
-![Fashion endpoint result](\images\enterprise-api\image-editing\assets\images\Fashion-ae35005b2e022cc90044d7760c301db9.jpg)
-
-### Multiview[​](#multiview "Direct link to Multiview")
-
-This endpoint takes one input image and generates multiple views of that same image. Note that images of objects and images without a background produces better result.
-
-![Multiview endpoint result](\images\enterprise-api\image-editing\assets\images\Multiview-7498bf194208fac1ff50262cdbb70f02.jpg)
-
-### Headshot[​](#headshot "Direct link to Headshot")
-
-This endpoint allows you to generate head shot image
-
-![Head-Shot endpoint result](\images\enterprise-api\image-editing\assets\images\Head-Shot-f4982ff9247a211781404e0a6badb559.jpg)
-
-### FaceGen[​](#facegen "Direct link to FaceGen")
-
-This endpoint allows you to generate image with the face image provided
-
-![Face gen endpoint result](\images\enterprise-api\image-editing\assets\images\Face-Gen-90cdf5a0be5cc4e52b36cfcc87d9fb29.jpg)
-
-### Clear Server Cache Endpoint[​](#clear-server-cache-endpoint "Direct link to Clear Server Cache Endpoint")
-
-This endpoint clear server cache
-
-### Restart Server Endpoint[​](#restart-server-endpoint "Direct link to Restart Server Endpoint")
-
-This endpoint restart the server
-
-## Playground[​](#playground "Direct link to Playground")
-
-You can try the available endpoints in our [Playground](https://modelslab.com/playground/image-editing?tab=) section, just make sure to [sign up](https://modelslab.com/register) first.
+  <Card title="Mask Creator" icon="mask" href="/enterprise-api/image-editing/mask_creator">
+    Create custom masks for image editing workflows
+  </Card>
+</CardGroup>
