--- a/api-guide/apis/enterprise-api/image-to-video-ultra/system-details.mdx
+++ b/api-guide/apis/enterprise-api/image-to-video-ultra/system-details.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Enterprise: System Details Endpoint"
+description: "This endpoint returns information about your server."
+openapi: "POST /image_to_video_ultra/system_details"
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
