--- a/api-guide/apis/enterprise-api/image-to-video-ultra/overview.mdx
+++ b/api-guide/apis/enterprise-api/image-to-video-ultra/overview.mdx
@@ -1,38 +1,34 @@
 ---
-title: "Enterprise: Text to Video API"
+title: "Enterprise: Image to Video API"
+description: "Generate high-definition videos from images using the Image to Video Ultra API."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
+## Endpoints
 
-The Video Endpoints brings a collection of interesting endpoints that allows you generates video.
+<CardGroup cols={2}>
+  <Card title="Image to Video" icon="video" href="/enterprise-api/image-to-video-ultra/imagetovideo">
+    Convert static images into dynamic videos with AI
+  </Card>
 
-## Available Endpoints[​](#available-endpoints "Direct link to Available Endpoints")
+  <Card title="Fetch Video" icon="download" href="/enterprise-api/image-to-video-ultra/fetchvideo">
+    Retrieve queued and processing video requests
+  </Card>
 
-* [image to video](/enterprise-api/image-to-video-ultra/imagetovideo)
-* [fetchvideo](/enterprise-api/image-to-video-ultra/fetchvideo)
-* [clear\_cache](/enterprise-api/image-to-video-ultra/clear-cache)
-* [restart\_server](/enterprise-api/image-to-video-ultra/restart-server)
-* [system details](/enterprise-api/image-to-video-ultra/system-details)
-* [update server](/enterprise-api/image-to-video-ultra/update-server)
+  <Card title="Clear Cache" icon="trash" href="/enterprise-api/image-to-video-ultra/clear-cache">
+    Clear the API's cache for fresh processing
+  </Card>
 
-### Text to Video[​](#text-to-video "Direct link to Text to Video")
+  <Card title="Restart Server" icon="refresh" href="/enterprise-api/image-to-video-ultra/restart-server">
+    Restart your dedicated video processing server
+  </Card>
 
-This endpoint is used to create ultra high video from a text prompt
-
-##### Endpoint in Action[​](#endpoint-in-action "Direct link to Endpoint in Action")
-
-![Text to video endpoint result](\images\enterprise-api\image-to-video-ultra\assets\images\Text-to-video-059ae4e254324cdd6b271d791167cb35.jpg)
-
-### Fetch Video[​](#fetch-video "Direct link to Fetch Video")
-
-This endpoint to fetch queued and processing video rrequest
-
-![Fetch Queued Videos endpoint result](\images\enterprise-api\image-to-video-ultra\assets\images\Queue-Videos-051286175cdd986d42f37614a67d4b2a.jpg)
-
-### Clear Server Cache Endpoint[​](#clear-server-cache-endpoint "Direct link to Clear Server Cache Endpoint")
-
-This endpoint clear server cache
-
-### Restart Server Endpoint[​](#restart-server-endpoint "Direct link to Restart Server Endpoint")
-
-This endpoint restart the server
+  <Card title="System Details" icon="server" href="/enterprise-api/image-to-video-ultra/system-details">
+    Get information about your server status
+  </Card>
+  <Card title="Update Server" icon="arrow-up" href="/enterprise-api/image-to-video-ultra/update-server">
+    Update your dedicated server to the latest version
+  </Card>
+  <Card title="Clear Queue" icon="trash" href="/enterprise-api/image-to-video-ultra/clear-queue">
+    Clear the API's queue for fresh processing
+  </Card>
+</CardGroup>
