--- a/api-guide/apis/enterprise-api/image-to-video-ultra/restart-server.mdx
+++ b/api-guide/apis/enterprise-api/image-to-video-ultra/restart-server.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Enterprise: Restart Server Endpoint"
+description: "This endpoint is used to restart your dedicated server."
+openapi: "POST /image_to_video_ultra/restart_server"
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
