--- a/api-guide/apis/enterprise-api/interior/overview.mdx
+++ b/api-guide/apis/enterprise-api/interior/overview.mdx
@@ -1,49 +1,56 @@
 ---
 title: "Enterprise: Interior API"
+description: "Collection of endpoints to generate interiors, floor decoration and floor planning."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
+## Endpoints
 
-The endpoints brings a collection of interesting endpoints that allows you to generate interiors, floor decoration and floor planning
+<CardGroup cols={2}>
+  <Card title="Interior Design" icon="home" href="/enterprise-api/interior/make-interior">
+    Generate stunning interior designs with AI-powered creativity
+  </Card>
 
-* [interior](/enterprise-api/interior/make-interior)
-* [floor-planning](/enterprise-api/interior/floor-planning)
-* [room-decorator](/enterprise-api/interior/room-decorator)
-* [exterior-restorer](/enterprise-api/interior/exterior-restorer)
-* [scenario-changer](/enterprise-api/interior/scenario-changer)
-* [sketch-rendering](/enterprise-api/interior/sketch-rendering)
-* [fetch](/enterprise-api/interior/fetch)
-* [clear cache](/enterprise-api/interior/clear-cache)
-* [restart server](/enterprise-api/interior/restart-server)
-* [system details](/enterprise-api/interior/system-details)
-* [update server](/enterprise-api/interior/update-server)
+  <Card title="Floor Planning" icon="map" href="/enterprise-api/interior/floor-planning">
+    Create detailed floor plans and layouts for any space
+  </Card>
 
-## Available Endpoints[​](#available-endpoints "Direct link to Available Endpoints")
+  <Card title="Room Decorator" icon="palette" href="/enterprise-api/interior/room-decorator">
+    Transform and decorate rooms with various design styles
+  </Card>
 
-### Interior[​](#interior "Direct link to Interior")
+  <Card title="Exterior Restorer" icon="building" href="/enterprise-api/interior/exterior-restorer">
+    Restore and enhance building exteriors with AI
+  </Card>
 
-Interior endpoint allows generate home interiors easily
+  <Card title="Scenario Changer" icon="wand-magic-sparkles" href="/enterprise-api/interior/scenario-changer">
+    Change room scenarios and ambiance instantly
+  </Card>
 
-### Floor Planning[​](#floor-planning "Direct link to Floor Planning")
+  <Card title="Sketch Rendering" icon="pencil" href="/enterprise-api/interior/sketch-rendering">
+    Convert sketches into photorealistic interior renders
+  </Card>
 
-Floor planning endpoints allows you to generate floor plan from a room image.
+  <Card title="Fetch Results" icon="download" href="/enterprise-api/interior/fetch">
+    Retrieve queued and processing interior design requests
+  </Card>
 
-### Room Decorator[​](#room-decorator "Direct link to Room Decorator")
+  <Card title="Clear Cache" icon="trash" href="/enterprise-api/interior/clear-cache">
+    Clear the API's cache for fresh processing
+  </Card>
 
-Room Decorator endpoint allows allows you to create room decors using a promp.
+  <Card title="Clear Queue" icon="list-check">
+    Clear the processing queue for new requests
+  </Card>
 
-### Fetch Request[​](#fetch-request "Direct link to Fetch Request")
+  <Card title="Restart Server" icon="refresh" href="/enterprise-api/interior/restart-server">
+    Restart your dedicated interior design server
+  </Card>
 
-This endpoint to fetch queued and processing request.
+  <Card title="System Details" icon="server" href="/enterprise-api/interior/system-details">
+    Get information about your server status and performance
+  </Card>
 
-### Clear Server Cache Endpoint[​](#clear-server-cache-endpoint "Direct link to Clear Server Cache Endpoint")
-
-This endpoint clear server cache
-
-### Restart Server Endpoint[​](#restart-server-endpoint "Direct link to Restart Server Endpoint")
-
-This endpoint restart the server
-
-### System Details Endpoint[​](#system-details-endpoint "Direct link to System Details Endpoint")
-
-This endpoint checks for server details
+  <Card title="Update Server" icon="arrow-up" href="/enterprise-api/interior/update-server">
+    Update your dedicated server to the latest version
+  </Card>
+</CardGroup>
