--- a/api-guide/apis/enterprise-api/interior/floor-planning.mdx
+++ b/api-guide/apis/enterprise-api/interior/floor-planning.mdx
@@ -1,78 +1,77 @@
 ---
 title: "Enterprise: Specific Floor Planning Endpoint"
+description: "This endpoint allows you to generate floor plan from a room image."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
-
-get a rendered image of a Floor plan for a room .
-
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Make a `POST` request to below endpoint and pass the required parameters in the request body.
+```curl curl
 --request POST 'https://modelslab.com/api/v1/enterprise/interior/floor_planning' \
 ```
 
-Make a `POST` request to [https://modelslab.com/api/v1/enterprise/interior/floor\_planning](https://modelslab.com/api/v1/enterprise/interior/floor_planning) endpoint and pass the required parameters in the request body.
-
-## Body Attributes[​](#body-attributes "Direct link to Body Attributes")
-
-| Parameter                 | Description                                                                                                                                                                           | Values                                 |
-| :------------------------ | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | :------------------------------------- |
-| **key**                   | Your API Key used for request authorization                                                                                                                                           | string                                 |
-| **prompt**                | The text prompt describing the content you want in the generated image                                                                                                                | string                                 |
-| **init\_image**           | Link to the Initial Image of the room                                                                                                                                                 | string                                 |
-| **negative\_prompt**      | Negative prompts are descriptions of things we don't want in our image. Examples include NSFW content, extra limbs, distorted faces, poor quality, or anything else we want to avoid. | string                                 |
-| **strength**              | Prompt strength when using **init\_image** 1.0 corresponds to full destruction of information in the init image.                                                                      | float                                  |
-| **base64**                | Get response as base64 string, **default**: `false`                                                                                                                                   | boolean **options**: `true` or `false` |
-| **num\_inference\_steps** | The number of denoising steps. The acceptable values are 21, 31, or 41                                                                                                                | integer (21, 31, or 41)                |
-| **guidance\_scale**       | The scale for classifier-free guidance. The minimum is 1 and the maximum is 20                                                                                                        | integer (1 to 20)                      |
-| **temp**                  | Create temp image link. This link is valid for 24 hours.                                                                                                                              | boolean **options**: true/false        |
-| **seed**                  | Seed is used to reproduce results, same seed will give you same image in return again. Pass *null* for a random number.                                                               | int                                    |
-| **webhook**               | Provide a URL to receive a POST API call once the image generation is complete                                                                                                        | URL                                    |
-| **track\_id**             | This ID is returned in the response to the webhook API call and will be used to identify the webhook request                                                                          | integer value                          |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body
-
-```
-{  "key":"",  "init_image": "https://i.pinimg.com/564x/f6/73/9d/f6739dc3fec02fa4019d1045fdad4d47.jpg",  "prompt": "rendering floor plan of the apartment layout,top view,white background,masterpiece, kitchen, living room, sofa, chair,bedroom,car best quality, extremely detailed,best illustration, best shadow",  "seed": 0,  "guidance_scale": 8,  "strength": 0.99,  "num_inference_steps": 51,  "base64": false,  "temp": false,  "specific_object": null,  "webhook": null,  "track_id": null}
+## Body
+```json json
+{  
+    "key":"enterprise_api_key",  
+    "init_image": "https://i.pinimg.com/564x/f6/73/9d/f6739dc3fec02fa4019d1045fdad4d47.jpg",  
+    "prompt": "rendering floor plan of the apartment layout,top view,white background,masterpiece, kitchen, living room, sofa, chair,bedroom,car best quality, extremely detailed,best illustration, best shadow",  
+    "seed": 0,  
+    "guidance_scale": 8,  
+    "strength": 0.99,  
+    "num_inference_steps": 51,  
+    "base64": false,  
+    "temp": false,  
+    "specific_object": null, 
+    "webhook": null,  
+    "track_id": null
+}
 ```
 
-### Request[​](#request-1 "Direct link to Request")
+## Body Attributes
+<ParamField query="key" type="string" required>
+  Your API Key used for request authorization.
+</ParamField>
 
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
+<ParamField query="prompt" type="string" required>
+  The text prompt describing the content you want in the generated image.
+</ParamField>
 
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({      "key":"",      "init_image": "https://i.pinimg.com/564x/f6/73/9d/f6739dc3fec02fa4019d1045fdad4d47.jpg",      "prompt": "rendering floor plan of the apartment layout,top view,white background,masterpiece, kitchen, living room, sofa, chair,bedroom,car best quality, extremely detailed,best illustration, best shadow",      "seed": 0,      "guidance_scale": 8,      "strength": 0.99,      "num_inference_steps": 51,      "base64": false,      "temp": false,      "specific_object": null,      "webhook": null,      "track_id": null});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v1/enterprise/interior/floor_planning", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
+<ParamField query="init_image" type="string">
+  Link to the Initial Image of the room.
+</ParamField>
 
-```
-<?php$payload = [    "key" => "",    "init_image" => "https://i.pinimg.com/564x/f6/73/9d/f6739dc3fec02fa4019d1045fdad4d47.jpg",    "prompt" => "rendering floor plan of the apartment layout,top view,white background,masterpiece, kitchen, living room, sofa, chair,bedroom,car best quality, extremely detailed,best illustration, best shadow",    "seed" => 0,    "guidance_scale" => 8,    "strength" => 0.99,    "num_inference_steps" =>  51,    "base64" => false,    "temp" => false,    "specific_object" => null,    "webhook" =>  null,    "track_id" => null];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v1/enterprise/interior/floor_planning',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
+<ParamField query="negative_prompt" type="string">
+  Descriptions of elements to avoid in the image (e.g., NSFW content, extra limbs, poor quality).
+</ParamField>
 
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v1/enterprise/interior/floor_planning',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({      "key":"",      "init_image": "https://i.pinimg.com/564x/f6/73/9d/f6739dc3fec02fa4019d1045fdad4d47.jpg",      "prompt": "rendering floor plan of the apartment layout,top view,white background,masterpiece, kitchen, living room, sofa, chair,bedroom,car best quality, extremely detailed,best illustration, best shadow",      "seed": 0,      "guidance_scale": 8,      "strength": 0.99,      "num_inference_steps": 51,      "base64": false,      "temp": false,      "specific_object": null,      "webhook": null,      "track_id": null  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
+<ParamField query="strength" type="number" min="0" max="1">
+  Prompt strength when using init_image. 1.0 corresponds to full destruction of information in the init image.
+</ParamField>
 
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v1/enterprise/interior/floor_planning"payload = json.dumps({      "key":"",      "init_image": "https://i.pinimg.com/564x/f6/73/9d/f6739dc3fec02fa4019d1045fdad4d47.jpg",      "prompt": "rendering floor plan of the apartment layout,top view,white background,masterpiece, kitchen, living room, sofa, chair,bedroom,car best quality, extremely detailed,best illustration, best shadow",      "seed": 0,      "guidance_scale": 8,      "strength": 0.99,      "num_inference_steps": 51,      "base64": false,      "temp": false,      "specific_object": null,      "webhook": None,      "track_id": None})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
+<ParamField query="base64" type="boolean" default="false">
+  Return the image as a base64 string. Default is false.
+</ParamField>
 
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n  \"key\":\"QQfMOIQRX3CpBcvx57giw1DUM2eN7bRXIQzMo3gsFPERdmFHmwPKbkURRWUb\",\n  \"init_image\": \"https://i.pinimg.com/564x/f6/73/9d/f6739dc3fec02fa4019d1045fdad4d47.jpg\",\n  \"prompt\": \"rendering floor plan of the apartment layout,top view,white background,masterpiece, kitchen, living room, sofa, chair,bedroom,car best quality, extremely detailed,best illustration, best shadow\",\n  \"seed\": 0,\n  \"guidance_scale\": 8,\n  \"strength\": 0.99,\n  \"num_inference_steps\": 51,\n  \"base64\": false,\n  \"temp\": false,\n  \"specific_object\": null,\n  \"scale_down\": 6,\n  \"opacity\": 0.7,\n  \"padding_right\": 10,\n  \"padding_down\": 10,\n  \"webhook\": null,\n  \"track_id\": null\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v1/enterprise/interior/floor_planning")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .addHeader("X-API-Key", "{{token}}")  .build();Response response = client.newCall(request).execute();
-```
+<ParamField query="num_inference_steps" type="integer" enum="[21, 31, 41]">
+  The number of denoising steps. Acceptable values are 21, 31, or 41.
+</ParamField>
 
-### Response[​](#response "Direct link to Response")
+<ParamField query="guidance_scale" type="integer" min="1" max="20">
+  Scale for classifier-free guidance. The minimum is 1 and the maximum is 20.
+</ParamField>
 
-Example Response
+<ParamField query="temp" type="boolean" default="false">
+  Create a temporary image link valid for 24 hours.
+</ParamField>
 
-```
-{    "status": "success",    "generationTime": 10.1,    "id": 298,    "output": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/3ffcf7b3-34e2-4fcf-8c61-7b60bf81df37.png"    ],    "proxy_links": [        "https://cdn2.stablediffusionapi.com/generations/3ffcf7b3-34e2-4fcf-8c61-7b60bf81df37.png"    ],     "meta": {        "room_image": "https://upcdn.io/12a1yeE/raw/WhatsApp%20Image%202024-04-04%20at%208.06.42%20AM.jpeg",        "prompt": "luxury badroom, table, red carpet, wodden floor",        "seed": 3750372664,        "guidance_scale": 8,        "strength": 0.99,        "num_inference_steps": 51,        "base64": "no",        "temp": "no",        "specific_object": null,        "watermark": "no",        "scale_down": 6,        "opacity": 0.7,        "padding_right": 10,        "padding_down": 10,        "file_prefix": "3ffcf7b3-34e2-4fcf-8c61-7b60bf81df37",        "outdir": "out"    }}
-```
+<ParamField query="seed" type="integer">
+  Seed for reproducibility. Same seed returns the same image. Pass null for a random number.
+</ParamField>
+
+<ParamField query="webhook" type="string" format="url">
+  A URL to receive a POST API call once the image generation is complete.
+</ParamField>
+
+<ParamField query="track_id" type="integer">
+  ID returned in the webhook callback to identify the request.
+</ParamField>
