--- a/api-guide/apis/enterprise-api/interior/make-interior.mdx
+++ b/api-guide/apis/enterprise-api/interior/make-interior.mdx
@@ -1,78 +1,79 @@
 ---
 title: "Enterprise: Interior Endpoint"
+description: "This endpoint allows you to generate interior design from an image."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
 
-Create an interior design from an image
-
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Send a `POST` request to below endpoint and pass the required parameters in the request body.
+```curl curl
 --request POST 'https://modelslab.com/api/v1/enterprise/interior/make' \
 ```
 
-Make a `POST` request to [https://modelslab.com/api/v1/enterprise/interior/make](https://modelslab.com/api/v1/enterprise/interior/make) endpoint and pass the required parameters in the request body.
-
-## Body Attributes[​](#body-attributes "Direct link to Body Attributes")
-
-| Parameter                 | Description                                                                                                                                                                           | Values                                 |
-| :------------------------ | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | :------------------------------------- |
-| **key**                   | Your API Key used for request authorization                                                                                                                                           | string                                 |
-| **prompt**                | The text prompt describing the content you want in the generated image                                                                                                                | string                                 |
-| **init\_image**           | Link to the Initial Image of the room                                                                                                                                                 | string                                 |
-| **negative\_prompt**      | Negative prompts are descriptions of things we don't want in our image. Examples include NSFW content, extra limbs, distorted faces, poor quality, or anything else we want to avoid. | string                                 |
-| **strength**              | Prompt strength when using **init\_image** 1.0 corresponds to full destruction of information in the init image.                                                                      | float                                  |
-| **base64**                | Get response as base64 string, **default**: `false`                                                                                                                                   | boolean **options**: `true` or `false` |
-| **num\_inference\_steps** | The number of denoising steps. The acceptable values are 21, 31, or 41                                                                                                                | integer (21, 31, or 41)                |
-| **guidance\_scale**       | The scale for classifier-free guidance. The minimum is 1 and the maximum is 20                                                                                                        | integer (1 to 20)                      |
-| **temp**                  | Create temp image link. This link is valid for 24 hours.                                                                                                                              | boolean **options**: true/false        |
-| **seed**                  | Seed is used to reproduce results, same seed will give you same image in return again. Pass *null* for a random number.                                                               | int                                    |
-| **webhook**               | Provide a URL to receive a POST API call once the image generation is complete                                                                                                        | URL                                    |
-| **track\_id**             | This ID is returned in the response to the webhook API call and will be used to identify the webhook request                                                                          | integer value                          |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body
-
+## Body
+```json json
+{  
+    "key":"enterprise_api_key",  
+    "init_image": "https://imagedelivery.net/PP4qZJxMlvGLHJQBm3ErNg/50bc1662-8d41-468e-55d0-9575ad096000/768",  
+    "prompt": "Luxury bedroom with an elegant wooden floor, a stylish table, and a plush red carpet, creating a warm and sophisticated ambiance.",  
+    "negative_prompt": "bad quality",  
+    "seed": 0,  
+    "guidance_scale": 8,  
+    "strength": 0.99,  
+    "num_inference_steps": 51,  
+    "base64": false,  
+    "temp": false,  
+    "scale_down": 6,  
+    "webhook":null,  
+    "track_id":null
+}
 ```
-{  "key":"",  "init_image": "https://imagedelivery.net/PP4qZJxMlvGLHJQBm3ErNg/50bc1662-8d41-468e-55d0-9575ad096000/768",  "prompt": "Luxury bedroom with an elegant wooden floor, a stylish table, and a plush red carpet, creating a warm and sophisticated ambiance.",  "negative_prompt": "bad quality",  "seed": 0,  "guidance_scale": 8,  "strength": 0.99,  "num_inference_steps": 51,  "base64": false,  "temp": false,  "scale_down": 6,  "webhook":null,  "track_id":null}
-```
+## Body Attributes
 
-### Request[​](#request-1 "Direct link to Request")
+<ParamField query="key" type="string" required>
+  Your API Key used for request authorization.
+</ParamField>
 
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
+<ParamField query="prompt" type="string" required>
+  The text prompt describing the content you want in the generated image.
+</ParamField>
 
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({    "key":"",    "init_image": "https://imagedelivery.net/PP4qZJxMlvGLHJQBm3ErNg/50bc1662-8d41-468e-55d0-9575ad096000/768",    "prompt": "Luxury bedroom with an elegant wooden floor, a stylish table, and a plush red carpet, creating a warm and sophisticated ambiance.",    "negative_prompt": "bad quality",    "seed": 0,    "guidance_scale": 8,    "strength": 0.99,    "num_inference_steps": 51,    "base64": false,    "temp": false,    "webhook":null,    "track_id":null});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v1/enterprise/interior/make", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
+<ParamField query="init_image" type="string">
+  Link to the Initial Image of the room.
+</ParamField>
 
-```
-<?php$payload = [    "key": "",    "init_image" => "https://imagedelivery.net/PP4qZJxMlvGLHJQBm3ErNg/50bc1662-8d41-468e-55d0-9575ad096000/768",    "prompt" => "Luxury bedroom with an elegant wooden floor, a stylish table, and a plush red carpet, creating a warm and sophisticated ambiance.",    "negative_prompt" => "bad quality",    "seed" => 0,    "guidance_scale" => 8,    "strength" => 0.99,    "num_inference_steps" => 51,    "base64" => false,    "temp" => false,    "webhook" => null,    "track_id" => null];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v1/enterprise/interior/make',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
+<ParamField query="negative_prompt" type="string">
+  Descriptions of things you don't want in the image. Examples include NSFW content, extra limbs, distorted faces, or poor quality.
+</ParamField>
 
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v1/enterprise/interior/make',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key":"",    "init_image": "https://imagedelivery.net/PP4qZJxMlvGLHJQBm3ErNg/50bc1662-8d41-468e-55d0-9575ad096000/768",    "prompt": "Luxury bedroom with an elegant wooden floor, a stylish table, and a plush red carpet, creating a warm and sophisticated ambiance.",    "negative_prompt": "bad quality",    "seed": 0,    "guidance_scale": 8,    "strength": 0.99,    "num_inference_steps": 51,    "base64": false,    "temp": false,    "webhook":null,    "track_id":null  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
+<ParamField query="strength" type="number" min="0.0" max="1.0">
+  Prompt strength when using init_image. A value of 1.0 corresponds to full destruction of information in the init image.
+</ParamField>
 
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v1/enterprise/interior/make"payload = json.dumps({    "key":"",    "init_image": "https://imagedelivery.net/PP4qZJxMlvGLHJQBm3ErNg/50bc1662-8d41-468e-55d0-9575ad096000/768",    "prompt": "Luxury bedroom with an elegant wooden floor, a stylish table, and a plush red carpet, creating a warm and sophisticated ambiance.",    "negative_prompt": "bad quality",    "seed": 0,    "guidance_scale": 8,    "strength": 0.99,    "num_inference_steps": 51,    "base64": false,    "temp": false,    "webhook": None,    "track_id":None})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
+<ParamField query="base64" type="boolean" default="false">
+  Get the response as a base64 string. Options: `true` or `false`. Default is `false`.
+</ParamField>
 
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n   \"key\":\"\",\n  \"init_image\": \"https://imagedelivery.net/PP4qZJxMlvGLHJQBm3ErNg/50bc1662-8d41-468e-55d0-9575ad096000/768\",\n  \"prompt\": \"Luxury bedroom with an elegant wooden floor, a stylish table, and a plush red carpet, creating a warm and sophisticated ambiance.\",\n  \"negative_prompt\": \"bad quality\",\n  \"seed\": 0,\n  \"guidance_scale\": 8,\n  \"strength\": 0.99,\n  \"num_inference_steps\": 51,\n  \"base64\": false,\n  \"temp\": false,\n  \"padding_right\": 10,\n  \"padding_down\": 10\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v1/enterprise/interior/make")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .addHeader("X-API-Key", "{{token}}")  .build();Response response = client.newCall(request).execute();
-```
+<ParamField query="num_inference_steps" type="integer" enum="[21, 31, 41]">
+  The number of denoising steps. Acceptable values are 21, 31, or 41.
+</ParamField>
 
-### Response[​](#response "Direct link to Response")
+<ParamField query="guidance_scale" type="integer" min="1" max="20">
+  Scale for classifier-free guidance. Minimum is 1, maximum is 20.
+</ParamField>
 
-Example Response
+<ParamField query="temp" type="boolean" default="false">
+  Create a temporary image link. The link is valid for 24 hours.
+</ParamField>
 
-```
-{    "status": "success",    "generationTime": 2.10,    "id": 276,    "output": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/0e1ba8d1-1b91-475a-a2f5-e1ffe6d7022c.png"    ],    "proxy_links": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/0e1ba8d1-1b91-475a-a2f5-e1ffe6d7022c.png"    ],    "meta": {       "room_image": "https://imagedelivery.net/PP4qZJxMlvGLHJQBm3ErNg/50bc1662-8d41-468e-55d0-9575ad096000/768",        "prompt": "Luxury bedroom with an elegant wooden floor, a stylish table, and a plush red carpet, creating a warm and sophisticated ambiance.",        "negative_prompt": "bad quality",        "seed": 4280894440,        "guidance_scale": 8,        "strength": 0.99,        "num_inference_steps": 51,        "base64": "no",        "temp": "no",        "watermark": "no",        "scale_down": 6,        "opacity": 0.7,        "padding_right": 10,        "padding_down": 10,        "file_prefix": "271cedbb-c6ae-4042-8c81-4e59b7af37c8",        "outdir": "out"    }}
-```
+<ParamField query="seed" type="integer">
+  Seed used to reproduce results. Same seed returns the same image. Pass `null` for a random seed.
+</ParamField>
+
+<ParamField query="webhook" type="string" format="url">
+  Provide a URL to receive a POST API call once the image generation is complete.
+</ParamField>
+
+<ParamField query="track_id" type="integer">
+  This ID is returned in the response and used to identify the webhook request.
+</ParamField>
