feat: default values in api

--- a/index.mdx
+++ b/index.mdx
@@ -22,7 +22,7 @@ Transform your ideas into reality with ModelsLab's comprehensive AI API suite. G
   <Card 
     title="API Reference" 
     icon="code" 
-    href="/api-guide/overview"
+    href="/overview"
   >
     Complete API documentation with examples and integration guides
   </Card>
