--- a/3d-api/base64-to-url.mdx
+++ b/3d-api/base64-to-url.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Base64 to Url Endpoint"
+title: "Base64 to URL Endpoint"
 openapi: "POST /3d/base64_to_url"
 description: "Let's you to upload a 3D object in base64 format and retrieve a URL for the object."
 ---
