--- a/general-api/base64-to-url.mdx
+++ b/general-api/base64-to-url.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Base64 to Url"
+title: "Base64 to URL"
 openapi: 'POST /base64_to_url'
 description: 'Convert base64 strings of image, audio, video and 3d object file to a valid URL.'
 ---
