--- a/image-editing/base64-to-url.mdx
+++ b/image-editing/base64-to-url.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Base64 to Url Endpoint"
+title: "Base64 to URL Endpoint"
 openapi: 'POST /base64_to_url'
 description: 'This endpoint allows you to upload image in base64 format and get it in url format.'
 ---
