--- a/video-api/base64-to-url.mdx
+++ b/video-api/base64-to-url.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Base64 to Url Endpoint"
+title: "Base64 to URL Endpoint"
 openapi: 'POST /video/base64_to_url'
 description: "Upload a video in base64 format and retrieve it as a URL."
 ---
