--- a/voice-cloning/base64-to-url.mdx
+++ b/voice-cloning/base64-to-url.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Base64 to Url Endpoint"
+title: "Base64 to URL Endpoint"
 openapi: 'POST /voice/base64_to_url'
 description: 'The Base64 to URL endpoint allows you to upload audio in base64 format and retrieve it as a URL.'
 ---
