--- a/image-generation/flux_kontext/flux-kontext-img-to-image.mdx
+++ b/image-generation/flux_kontext/flux-kontext-img-to-image.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Flux kontext Image to Image Endpoint"
-openapi: 'POST /v6/images/img2img'
+openapi: '/image-generation/flux_kontext/openapi.json POST /img2img'
 description: 'Create high quality image from text using FLUX Kontext model.'
 ---
 
