--- a/api-guide/apis/enterprise-api/realtime/overview.mdx
+++ b/api-guide/apis/enterprise-api/realtime/overview.mdx
@@ -1,82 +1,44 @@
 ---
 title: "Enterprise: Realtime API"
+description: "Collection of endpoints to generate images in seconds using text or image as input."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
+## Endpoints
 
-Generate image in seconds
+<CardGroup cols={2}>
+  <Card title="Text to Image" icon="file-text" href="/enterprise-api/realtime/text2img">
+    Generate and return an image directly from a text description
+  </Card>
 
-You can also specify the number of images to be generated and set their height and width.
+  <Card title="Image to Image" icon="image" href="/enterprise-api/realtime/img2img">
+    Transform an existing image using prompts for creative modifications
+  </Card>
 
-Currently the API supports the following image formats: **PNG** and **JPG**.
+  <Card title="Inpainting" icon="brush" href="/enterprise-api/realtime/inpaint">
+    Replace or modify specific parts of an image using a mask
+  </Card>
 
-## Available Endpoints[​](#available-endpoints "Direct link to Available Endpoints")
+  <Card title="Fetch Images" icon="download" href="/enterprise-api/realtime/fetchimage">
+    Retrieve queued or processing image generation requests
+  </Card>
 
-* [text2img](/enterprise-api/realtime/text2img)
-* [img2img](/enterprise-api/realtime/img2img)
-* [inpaint](/enterprise-api/realtime/inpaint)
-* [fetch](/enterprise-api/realtime/fetchimage)
-* [clear cache](/enterprise-api/realtime/clear-cache)
-* [restart server](/enterprise-api/realtime/restart-server)
-* [system details](/enterprise-api/realtime/system-details)
-* [update server](/enterprise-api/realtime/update-server)
+  <Card title="Clear Cache" icon="trash" href="/enterprise-api/realtime/clear-cache">
+    Clear the API’s server cache for fresh processing
+  </Card>
 
-### Text to Image Endpoint[​](#text-to-image-endpoint "Direct link to Text to Image Endpoint")
+  <Card title="Clear Queue" icon="list-check" href="/enterprise-api/realtime/clear-queue">
+    Clear the processing queue for new requests
+  </Card>
 
-This endpoint generates and returns an image from a text passed in the request.
+  <Card title="Restart Server" icon="refresh" href="/enterprise-api/realtime/restart-server">
+    Restart your dedicated realtime image generation server
+  </Card>
 
-You can write prompt and negative prompt. The prompt is for the things you would like to see in the image and the **negative prompt** is to refine your description by listing the things you do **not want** to have in the generated image.
+  <Card title="System Details" icon="server" href="/enterprise-api/realtime/system-details">
+    Get information about your server status and performance
+  </Card>
 
-##### Endpoint in Action[​](#endpoint-in-action "Direct link to Endpoint in Action")
-
-![Text to image endpoint result](\images\enterprise-api\realtime\assets\images\Realtime-Text-to-image-794d2b0546da382247ec0fd32988dc0f.jpg)
-
-### Image to Image Endpoint[​](#image-to-image-endpoint "Direct link to Image to Image Endpoint")
-
-This endpoint generates and returns an image from an image passed with its URL in the request.
-
-Together with the image you can add your description of the desired result by passing prompt and negative prompt.
-
-The generated image will be based on the original image with the modifications described in the prompts.
-
-##### Endpoint in Action[​](#endpoint-in-action-1 "Direct link to Endpoint in Action")
-
-![Image to image endpoint result](\images\enterprise-api\realtime\assets\images\Realtime-Image-to-image-9643cb98e1b294f96c3c632d9e6202fd.jpg)
-
-### Inpainting Endpoint[​](#inpainting-endpoint "Direct link to Inpainting Endpoint")
-
-This endpoint generates and returns an image from an image and a mask passed with their URLs in the request.
-
-Together with the image and the mask you can add your description of the desired result by passing prompt and negative prompt.
-
-The generated image will be based on the original image with the applied mask in order to replace an element in the image according to the modifications described in the prompts.
-
-##### Endpoint in Action[​](#endpoint-in-action-2 "Direct link to Endpoint in Action")
-
-![Inpainting endpoint result](\images\enterprise-api\realtime\assets\images\Realtime-inpainting-620336ac69c1ce8e66904c1d1942eebc.jpg)
-
-### Fetch Queued Images Endpoint[​](#fetch-queued-images-endpoint "Direct link to Fetch Queued Images Endpoint")
-
-This endpoint returns an already generated image by passing its **ID** with the endpoint location. This ID is specified by the **id** parameter in the response returned upon the request execution.
-
-<Note>
-  Sometimes the response to your request might be with a **processing** status. In this case, instead of an output image, you will get its **ID** and the **eta** (estimated time) needed for it to be generated. This is when the Fetch Queued Image endpoint comes in handy. Simply pass your API key as the request body to the endpoint location returned by the `fetch_result` parameter.
-
-  Alternatively, in your generation request, you can pass a webhook, on which a post API call will be made.
-</Note>
-
-##### Endpoint in Action[​](#endpoint-in-action-3 "Direct link to Endpoint in Action")
-
-![Super Resolution endpoint result](\images\enterprise-api\realtime\assets\images\Realtime-fetch-c14019fe06b12fc31a945b229590413c.jpg)
-
-### Clear Server Cache Endpoint[​](#clear-server-cache-endpoint "Direct link to Clear Server Cache Endpoint")
-
-This endpoint clear server cache
-
-### Restart Server Endpoint[​](#restart-server-endpoint "Direct link to Restart Server Endpoint")
-
-This endpoint restart the server
-
-## Playground[​](#playground "Direct link to Playground")
-
-You can try the available endpoints in our [Playground](https://modelslab.com/playground/text-to-image?tab=1\&model_id=midjourney) section, just make sure to [sign up](https://modelslab.com/register) first.
+  <Card title="Update Server" icon="arrow-up" href="/enterprise-api/realtime/update-server">
+    Update your dedicated server to the latest version
+  </Card>
+</CardGroup>
