--- a/api-guide/apis/enterprise-api/realtime/system-details.mdx
+++ b/api-guide/apis/enterprise-api/realtime/system-details.mdx
@@ -1,67 +1,17 @@
 ---
 title: "Enterprise: System Details Endpoint"
+description: "This endpoint is used to retrieve information about your server."
+openapi: "POST /realtime/system_details"
 ---
 
-## Overview[​](#overview "Direct link to Overview")
-
-This endpoint returns information about your server.
-
-## Request[​](#request "Direct link to Request")
-
-```
+## Request`
+Make a `POST` request to below endpoint and pass the required parameters as a request body.
+```curl curl
 --request POST 'https://modelslab.com/api/v1/enterprise/realtime/system_details' \
 ```
-
-Send a `POST` request to [https://modelslab.com/api/v1/enterprise/realtime/system\_details](https://modelslab.com/api/v1/enterprise/realtime/system_details) endpoint to get information about your server.
-
-## Attributes[​](#attributes "Direct link to Attributes")
-
-| Parameter | Description                                             |
-| :-------- | :------------------------------------------------------ |
-| **key**   | Your enterprise API Key used for request authorization. |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body Raw
-
-```
-{ "key": "enterprise_api_key"}
-```
-
-### Request[​](#request-1 "Direct link to Request")
-
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
-
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({ "key": ""});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v1/enterprise/realtime/system_details", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
-
-```
-<?php$payload = [  "key" => ""];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v1/enterprise/realtime/system_details',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
-
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v1/enterprise/realtime/system_details',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": ""  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
-
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v1/enterprise/realtime/system_details"payload = json.dumps({ "key": ""})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
-
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n    \"key\": \"\"\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v1/enterprise/realtime/system_details")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
-
-### Response[​](#response "Direct link to Response")
-
-The example below shows that there are no queued images for processing at the moment of the request.
-
-```
-{  "model_count": 0,  "queue_time": 0,  "status": "ok"}
+## Body
+```json json
+{ 
+    "key": "enterprise_api_key"
+}
 ```
