--- a/api-guide/apis/enterprise-api/super-resolution/fetchimage.mdx
+++ b/api-guide/apis/enterprise-api/super-resolution/fetchimage.mdx
@@ -1,69 +1,18 @@
 ---
 title: "Enterprise: Fetch Queued Images Endpoint"
+description: "This endpoint is used to fetch images that are queued for super resolution."
+openapi: "POST /super-resolution/fetch/{id}"
 ---
 
-## Overview[​](#overview "Direct link to Overview")
-
-Fetch Queued Images API fetches queued images for super resolution.
-
-Usually more complex image generation requests take more time for processing. Such requests are being queued for processing and the output images are retrievable after some time.
-
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Send a `POST` request to below endpoint to return the corresponding queued images. Where `{id}` is the ID returned together with the image URL in the response upon its generation. This endpoint does not generate new images, it returns already generated/queued images.
+```curl curl
 --request POST 'https://modelslab.com/api/v1/enterprise/super_resolution/fetch/{id}' \
 ```
 
-Send a `POST` request to [https://modelslab.com/api/v1/enterprise/super\_resolution/fetch/\{id}](https://modelslab.com/api/v1/enterprise/super_resolution/fetch/%7Bid%7D) endpoint to return the corresponding queued images. Where `{id}` is the ID returned together with the image URL in the response upon its generation. This endpoint does not generate new images, it returns already generated/queued images.
-
-## Attributes[​](#attributes "Direct link to Attributes")
-
-| Parameter | Description                                 |
-| :-------- | :------------------------------------------ |
-| **key**   | Your API Key used for request authorization |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body Raw
-
-```
-{ "key": ""}
-```
-
-### Request[​](#request-1 "Direct link to Request")
-
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
-
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({ "key": ""});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v1/enterprise/super_resolution/fetch/{id}", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
-
-```
-<?php$payload = [  "key" => ""];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v1/enterprise/super_resolution/fetch/{id}',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
-
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v1/enterprise/super_resolution/fetch/{id}',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": ""  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
-
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v1/enterprise/super_resolution/fetch/{id}"payload = json.dumps({ "key": ""})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
-
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n    \"key\": \"\"\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v1/enterprise/super_resolution/fetch/{id}")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
-
-### Response[​](#response "Direct link to Response")
-
-Example Response
-
-```
-{    "status": "success",    "id": 12202888,    "output": [        "https://pub-8b49af329fae499aa563997f5d4068a4.r2.dev/generations/e5cd86d3-7305-47fc-82c1-7d1a3b130fa4-0.png"    ]}
+## Body
+```json json
+{ 
+    "key": "enterprise_api_key"
+}
 ```
